--- a/qwiki/tsconfig.json
+++ b/qwiki/tsconfig.json
@@ -5,10 +5,11 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "outDir": "target"
+    "outDir": "dist",
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts",
+    "src/**/*.js"
   ],
   "exclude": [
     "**/*.spec.ts"
