--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/qooando/qwiki#readme",
   "devDependencies": {
+    "@types/js-yaml": "^4.0.9",
     "typescript": "^5.4.2"
   },
   "dependencies": {
