--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -10,7 +10,7 @@
     "build+dev": "npx tsc --target es2015 && cp -r ./src/resources ./dist/ && node ./dist/app.js --listen",
     "dev": "node ./dist/app.js --listen",
     "release": "node ./dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/qooando/qwiki#readme",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
