--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -4,11 +4,11 @@
   "description": "A lightweight and extendable wiki application",
   "main": "qwiki.js",
   "scripts": {
-    "tsc": "tsc",
     "prestart": "npm run tsc --target es2015 ",
     "build": "npx tsc --target es2015 && cp -r ./src/resources ./dist/",
-    "build+dev": "npx tsc --target es2015 && cp -r ./src/resources ./dist/ && node ./dist/app.js --listen",
+    "build+trace": "npx tsc --target es2015 --traceResolution && cp -r ./src/resources ./dist/",
     "dev": "node ./dist/app.js --listen",
+    "build+dev": "npm run build && npm run dev",
     "release": "node ./dist/app.js",
     "test": "npx jest"
   },
@@ -34,7 +34,12 @@
     "esm": "^3.2.25",
     "glob": "^10.3.12",
     "localized-strings": "^0.2.4",
+    "module-alias": "^2.2.3",
     "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0"
+    "pino-pretty": "^11.0.0",
+    "yaml": "^2.4.1"
+  },
+  "_moduleAliases": {
+    "@qwiki"      : "./dist"
   }
 }
