--- a/qwiki/tsconfig.json
+++ b/qwiki/tsconfig.json
@@ -7,6 +7,11 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "outDir": "dist",
+    "paths": {
+      "@qwiki/*": [
+        "./src/*"
+      ],
+    }
   },
   "include": [
     "src/**/*.ts",
