--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -24,24 +24,29 @@
   "homepage": "https://github.com/qooando/qwiki#readme",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-actuator": "^1.8.3",
+    "@types/glob": "^8.1.0",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
-    "@types/glob": "^8.1.0",
     "@types/node-json-transform": "^1.0.2",
+    "@types/swagger-ui-express": "^4.1.6",
     "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@wesleytodd/openapi": "^1.0.0",
     "esm": "^3.2.25",
     "express": "^4.19.2",
+    "express-actuator": "^1.8.4",
     "glob": "^10.3.12",
     "localized-strings": "^0.2.4",
     "module-alias": "^2.2.3",
     "node-json-transform": "^1.1.2",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
     "yaml": "^2.4.1"
   },
