feat: wiki routes

--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -5,8 +5,9 @@
   "main": "qwiki.js",
   "scripts": {
     "prestart": "npm run tsc --target es2015 ",
-    "build": "npx tsc --target es2015 && cp -r ./src/resources ./dist/",
-    "build+trace": "npx tsc --target es2015 --traceResolution && cp -r ./src/resources ./dist/",
+    "copy-statics": "cp -r ./src/resources ./dist/ && cd src && find . -regextype posix-extended -regex '.*\\.(css|html)' -exec cp --parents {} ../dist/ \\;",
+    "build": "npx tsc --target es2015 && npm run copy-statics",
+    "build+trace": "npx tsc --target es2015 --traceResolution && npm run copy-statics",
     "dev": "node ./dist/app.js --listen",
     "build+dev": "npm run build && npm run dev",
     "release": "node ./dist/app.js",
@@ -40,6 +41,7 @@
     "esm": "^3.2.25",
     "express": "^4.19.2",
     "express-actuator": "^1.8.4",
+    "express-requests-logger": "^4.0.0",
     "glob": "^10.3.12",
     "localized-strings": "^0.2.4",
     "module-alias": "^2.2.3",
