feat: first client stub

--- a/qwiki/tsconfig.json
+++ b/qwiki/tsconfig.json
@@ -14,6 +14,9 @@
     "paths": {
       "@qwiki/*": [
         "./src/*"
+      ],
+      "@qlient/*": [
+        "./src/client/js/*"
       ]
     }
   },
