--- a/qwiki/src/resources/application.yaml
+++ b/qwiki/src/resources/application.yaml
@@ -18,7 +18,7 @@ qwiki:
       localPath: "./dist/client"
     storages:
       files:
-        localPath: "./dist/data"
+        localPath: "./editions/example"
 
   #    policies:
   #      # specify default missing provider policy
