--- a/qwiki/src/resources/application.yaml
+++ b/qwiki/src/resources/application.yaml
@@ -15,7 +15,7 @@ qwiki:
     servers:
       - wiki
     staticFiles:
-      localPath: "./dist/static"
+      localPath: "../client"
     storages:
       defaultProtocol: file
       protocols:
