--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -5,17 +5,10 @@
   "main": "qwiki.js",
   "type": "module",
   "scripts": {
-    "prestart": "npm run tsc --target es2015 ",
-    "copy-statics": "sh copy-statics.sh",
-    "build": "npx tsc && npm run copy-statics",
-    "build+trace": "npx tsc --traceResolution && npm run copy-statics",
-    "dev": "node --import ./dist/register.js ./dist/app.js --listen",
+    "build": "sh build.sh",
+    "dev": "cd .. && sh start.sh",
     "build+dev": "npm run build && npm run dev",
-    "clean+build+dev": "npm run clean & npm run build && npm run dev",
-    "release": "node --import ./dist/register.js ./dist/app.js ",
-    "release-with-loader": "node --loader=./dist/loader.js ./dist/app.js ",
-    "test": "npx jest",
-    "clean": "rm -fr ./dist"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
@@ -31,6 +24,7 @@
     "@types/express": "^4.17.21",
     "@types/express-actuator": "^1.8.3",
     "@types/glob": "^8.1.0",
+    "@types/handlebars": "^4.1.0",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.9",
     "@types/node-json-transform": "^1.0.2",
@@ -46,6 +40,7 @@
     "express": "^4.19.2",
     "express-actuator": "^1.8.4",
     "glob": "^10.3.12",
+    "handlebars": "^4.7.8",
     "js-yaml": "^4.1.0",
     "localized-strings": "^0.2.4",
     "node-json-transform": "^1.1.2",
@@ -53,10 +48,11 @@
     "pino-pretty": "^11.0.0",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1",
-    "yaml": "^2.4.1"
+    "yaml": "^2.4.1",
+    "resolve": "^1.22.8",
+    "tsc": "^2.0.4"
   },
   "_moduleAliases": {
-    "@qwiki": "./dist",
-    "@qlient": "./dist/static/js"
+    "@qwiki": "./"
   }
 }
