update client resolving paths

--- a/qclient/tsconfig.json
+++ b/qclient/tsconfig.json
@@ -15,7 +15,12 @@
       "@qlient/*": [
         "./src/*"
       ]
-    }
+    },
+    "plugins": [
+      {
+        "transform": "./compiler/transformer-static-paths"
+      }
+    ]
   },
   "include": [
     "src/**/*"
