--- a/qclient/package.json
+++ b/qclient/package.json
@@ -22,12 +22,10 @@
   "homepage": "https://github.com/qooando/qwiki#readme",
   "devDependencies": {
     "@types/handlebars": "^4.1.0",
+    "ts-patch": "^3.1.2",
     "typescript": "^5.4.2"
   },
   "dependencies": {
     "handlebars": "^4.7.8"
-  },
-  "_moduleAliases": {
-    "@qlient": "./build/webclient/js"
   }
 }
