--- a/qclient/package.json
+++ b/qclient/package.json
@@ -2,7 +2,7 @@
   "name": "qlient",
   "version": "1.0.0",
   "description": "Web client for qwiki",
-  "main": "app.js",
+  "private": true,
   "type": "module",
   "scripts": {
     "build": "sh build.sh",
@@ -22,10 +22,14 @@
   "homepage": "https://github.com/qooando/qwiki#readme",
   "devDependencies": {
     "@types/handlebars": "^4.1.0",
+    "@types/lodash": "^4.17.1",
     "ts-patch": "^3.1.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "handlebars": "^4.7.8"
+    "handlebars": "^4.7.8",
+    "lodash": "^4.17.21"
   }
 }
