--- a/qclient/package.json
+++ b/qclient/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/qooando/qwiki#readme",
   "devDependencies": {
-    "@types/handlebars": "^4.1.0",
     "@types/lodash": "^4.17.1",
+    "@types/uuid": "^9.0.8",
     "ts-patch": "^3.1.2",
     "typescript": "^5.4.2",
     "webpack": "^5.91.0",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "handlebars": "^4.7.8",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.1"
   }
 }
