--- a/qwiki/src/resources/application.yaml
+++ b/qwiki/src/resources/application.yaml
@@ -11,17 +11,20 @@ qwiki:
       kind: Express
       host: 0.0.0.0
       port: 8080
-  wiki:
-    servers:
-      - wiki
-    staticFiles:
-      localPath: "../client"
-    storages:
-      defaultProtocol: file
-      protocols:
-        file:
-          searchPaths:
-            - "./data"
+  persistence:
+    bean: FileRepository
+
+#  wiki:
+#    servers:
+#      - wiki
+#    staticFiles:
+#      localPath: "../client"
+#    storages:
+#      defaultProtocol: file
+#      protocols:
+#        file:
+#          searchPaths:
+#            - "./data"
 
   #    policies:
   #      # specify default missing provider policy
