permits to pass contructor parameters to beans

--- a/qwiki/src/resources/application.yaml
+++ b/qwiki/src/resources/application.yaml
@@ -12,7 +12,7 @@ qwiki:
       host: 0.0.0.0
       port: 8080
   persistence:
-    bean: FileRepository
+    kind: File
     config:
       basePath: "./data"
 #  wiki:
