--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -32,7 +32,7 @@
     "@types/uuid": "^9.0.8",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@wesleytodd/openapi": "^1.0.0",
@@ -43,14 +43,16 @@
     "handlebars": "^4.7.8",
     "js-yaml": "^4.1.0",
     "localized-strings": "^0.2.4",
+    "mongodb": "^6.6.2",
     "node-json-transform": "^1.1.2",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
-    "swagger-ui-express": "^5.0.0",
-    "uuid": "^9.0.1",
-    "yaml": "^2.4.1",
     "resolve": "^1.22.8",
-    "tsc": "^2.0.4"
+    "swagger-ui-express": "^5.0.0",
+    "tingodb": "^0.6.1",
+    "tsc": "^2.0.4",
+    "uuid": "^9.0.1",
+    "yaml": "^2.4.1"
   },
   "_moduleAliases": {
     "@qwiki": "./"
