--- a/qwiki/package.json
+++ b/qwiki/package.json
@@ -41,11 +41,13 @@
     "handlebars": "^4.7.8",
     "js-yaml": "^4.1.0",
     "localized-strings": "^0.2.4",
+    "mongodb": "^6.6.2",
     "node-json-transform": "^1.1.2",
     "pino": "^8.19.0",
     "pino-pretty": "^11.0.0",
     "resolve": "^1.22.8",
     "swagger-ui-express": "^5.0.0",
+    "tingodb": "^0.6.1",
     "uuid": "^9.0.1",
     "yaml": "^2.4.1"
   },
