--- a/qwiki/src/resources/application.yaml
+++ b/qwiki/src/resources/application.yaml
@@ -7,21 +7,30 @@ qwiki:
       - "./modules/server/**/*.js"
       - "./modules/server-express/**/*.js"
       - "./modules/persistence/**/*.js"
-      #      - "./modules/persistence-mongodb/**/*.js"
-      - "./modules/persistence-tingodb/**/*.js"
+      - "./modules/persistence-mongodb/**/*.js"
+      #      - "./modules/persistence-tingodb/**/*.js
+      - "./modules/scanners/**/*.js"
+      - "./modules/wiki/**/*.js"
       - "./resources/**/*.json"
       - "./resources/**/*.yaml"
   servers:
-    wiki:
+    default:
       kind: Express
       host: 0.0.0.0
       port: 8080
   persistence:
-    tingodb:
-      dbPath: "./local.nosql"
-#    mongodb:
-#      connectionString: "mongodb://admin:admin@localhost:27017/qwiki"
-#
+    #    tingodb:
+    #      dbPath: "./local.nosql"
+    mongodb:
+      dbName: qwiki
+      dbUrl: "mongodb://admin:password@localhost:27017/"
+  applications:
+    wiki:
+      serverName: default # same of a server above
+
+  #    mongodb:
+  #      connectionString: "mongodb://admin:admin@localhost:27017/qwiki"
+  #
   #  wiki:
   #    servers:
   #      - wiki
